--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -66,7 +66,7 @@
 
 .right-header {
     width: 100%;
-    height: 10vh;
+    height: 8vh;
     border-bottom: 1px solid grey;
     display: flex;
 }
@@ -75,6 +75,7 @@
     width: 50%;
     height: auto;
     display: flex;
+    /* border: 2px solid blue; */
 }
 
 .header-box {
@@ -325,4 +326,66 @@ form .text h3 a{
 form .text h3 a:hover{
   text-decoration: underline;
 }
+
+
+
+
+
+.update-details{
+    border: 2px solid black; 
+    border-radius: 8px; 
+    margin: 0px auto; 
+    padding: 20px; 
+    max-width: 500px; 
+    background-color: #f8f9fa;
+}
+
+.form-control,
+.form-select {
+    width: 100%;
+    padding: 8px; 
+}
+
+
+.detail {
+    margin-bottom: 10px; 
+
+}
+
+.btn-primary {
+    margin-top: 20px; 
+    width: 100%; 
+}
+.btn-primary {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+    padding: 0.375rem 0.75rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.detail-2 input{
+    display: block;
+    width: 100%; 
+    border: 1px solid #767676; 
+   
+    border-radius: 0.25rem;
+    font-size: 16px; 
+    outline: none;
+}
+.detail-heading{
+    text-align: center;
+     margin-bottom: 20px;
+     font-weight: 600;
+}
+
+
 
