--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -7,14 +7,14 @@
 .dashboard {
     width: 100%;
     height: 100vh;
-    border: 2px solid black;
+   
     display: flex;
 }
 
 .left_dashboard {
     width: 17%;
     height: 100vh;
-    background: black;
+    background:#252525;
     display: flex;
     flex-direction: column;
     color: white;
@@ -31,13 +31,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    
 }
 
 .dropdown-menu {
     display: flex;
-    border: 2px solid pink;
+
     width: 100%;
-    height: 5vh;
+    height: 8vh;
     align-items: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -50,15 +51,15 @@
 .menu-icons {
     font-size: 28px;
     width: 20%;
-    margin-left: 8%;
+    margin-left: 0;
 }
 
 .right_dashboard {
     width: 83%;
     border: 2px solid green;
-    min-height: 100vh;
+   
     height: auto;
-    padding: 20px;
+    padding: 10px;
     background-color: #f4f4f4; /* Background color to distinguish the right section */
     display: flex;
     flex-direction: column;
@@ -66,42 +67,45 @@
 
 .right-header {
     width: 100%;
-    height: 8vh;
+    height: 7vh;
     border-bottom: 1px solid grey;
     display: flex;
 }
 
 .left-part {
-    width: 50%;
+    width: 20%;
     height: auto;
     display: flex;
-    /* border: 2px solid blue; */
+    
 }
 
 .header-box {
-    width: 40%;
+    width: 100%;
     height: auto;
     display: flex;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 10px;
+   
+    justify-content: space-around;
 }
 
 .header-dashboard {
-    width: 50%;
+    width: 40%;
     height: auto;
     font-size: 20px;
     cursor: pointer;
+    transition: 0.5s ease; 
+    text-align: center;
+    margin-right: 30px;
+    
 }
 
-.header-settings {
-    width: 50%;
-    height: auto;
-    font-size: 20px;
-    cursor: pointer;
+.header-dashboard:hover{
+     border-bottom: 2px solid blue;
 }
 
 .right-part {
-    width: 50%;
+    width: 80%;
     height: auto;
     display: flex;
     justify-content: flex-end;
@@ -332,18 +336,25 @@ form .text h3 a:hover{
 
 
 .update-details{
-    border: 2px solid black; 
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     border-radius: 8px; 
     margin: 0px auto; 
     padding: 20px; 
     max-width: 500px; 
     background-color: #f8f9fa;
+    color: #333;
+    width: 50%;
+
 }
 
 .form-control,
 .form-select {
     width: 100%;
     padding: 8px; 
+    border: 1.5px solid #C7BEBE;
+    border-bottom-width: 2.5px;
+    border-radius: 6px;
+    transition: all 0.3s ease;
 }
 
 
@@ -380,12 +391,28 @@ form .text h3 a:hover{
     border-radius: 0.25rem;
     font-size: 16px; 
     outline: none;
+    border: 1.5px solid #C7BEBE;
+    border-bottom-width: 2.5px;
+    border-radius: 6px;
+    transition: all 0.3s ease;
 }
 .detail-heading{
     text-align: center;
      margin-bottom: 20px;
      font-weight: 600;
+     position: relative;
+  
+     height: 7vh;
 }
-
+.detail-heading::before{
+  content: '';
+  position: absolute;
+  left: 110px;
+  bottom: 0;
+  height: 3px;
+  width: 250px;
+  border-radius: 12px;
+  background: #4070f4;
+}
 
 
