--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -35,9 +35,9 @@
 
 }
 
-.dropdown-menu {
+.dashboard-menu-box {
     display: flex;
-
+    position: relative;
     width: 100%;
     height: 8vh;
     align-items: center;
@@ -45,9 +45,10 @@
     transition: background-color 0.3s ease;
 }
 
-.dropdown-menu:hover {
+.dashboard-menu-box:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
+
 
 .menu-icons {
     font-size: 28px;
@@ -185,7 +186,7 @@
 
 .chart-container {
     width: 97%;
-    height: 54vh;
+    height: 52vh;
     border-radius: 5px;
     margin-top: 20px;
     padding: 15px;
@@ -262,6 +263,7 @@ Add form restaru css */
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     margin: auto;
     margin-top: 50px;
+
 
 }
 
@@ -435,4 +437,57 @@ form .text h3 a:hover {
     border-bottom-width: 2.5px;
     border-radius: 6px;
     transition: all 0.3s ease;
+}
+
+
+
+
+.playlist-container{
+    width: 98%;
+    height: 85vh;
+    border: 1.5px solid #C7BEBE;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    
+}
+
+.restro-menu{
+    width: 100%;
+    height: 45vh;
+    border-bottom:  2px solid green;
+    display: flex;
+    flex-direction: column;
+   
+}
+
+.restro-menu-heading{
+    font-size: 24px;
+    padding: 10px;
+    text-decoration: underline;
+}
+
+
+
+
+.restro-caraousel{
+    width: 100%;
+    height: 45vh;
+   
+    
+}
+.restro-menu-box{
+    /* border: 2px solid black; */
+    width: 100%;
+    height: 33vh;
+    display: flex;
+    justify-content: space-around;
+   
+    
+}
+.menu-image{
+    width: 18%;
+    height: 33vh;
+    border-radius: 5px;
 }
