--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -50,10 +50,13 @@
 }
 
 
+
+
 .menu-icons {
     font-size: 28px;
     width: 20%;
     margin-left: 0;
+    
 }
 
 .right_dashboard {
@@ -450,6 +453,7 @@ form .text h3 a:hover {
     flex-direction: column;
     margin-top: 20px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    margin-left: 10px;
     
 }
 
@@ -459,15 +463,32 @@ form .text h3 a:hover {
     border-bottom:  2px solid green;
     display: flex;
     flex-direction: column;
+    
    
 }
-
+.restro-menu-header{
+    display: flex;
+    
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 15px;
+    color: grey;
+    
+}
 .restro-menu-heading{
     font-size: 24px;
     padding: 10px;
-    text-decoration: underline;
+  
+  
 }
+.restro-menu-icons{
+    width: 15%;
 
+    font-size: 28px;
+    text-align: center;
+    align-content: center;
+    cursor: pointer;
+}
 
 
 
@@ -478,7 +499,7 @@ form .text h3 a:hover {
     
 }
 .restro-menu-box{
-    /* border: 2px solid black; */
+    
     width: 100%;
     height: 33vh;
     display: flex;
@@ -487,7 +508,9 @@ form .text h3 a:hover {
     
 }
 .menu-image{
-    width: 18%;
-    height: 33vh;
+    width: 13%;
+    height: 30vh;
     border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
 }
