--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -25,42 +25,82 @@
     width: 100%;
 }
 
-.dashboard-menu {
+.dashboard-sidebar{
     width: 100%;
-    margin-top: 40px;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    margin-top: 50px;
+    height: 75vh;
+    overflow: hidden;
+    
+    
+  
+
+}
+
+.sidebar-items{
    
-    padding-left: 10px;
-
-}
-
-.dashboard-menu-box {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 8vh;
-    align-items: center;
+    list-style: none;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.dashboard-menu-box:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    align-items: center;
 }
 
 
+.sidebar-items li{
+ 
+    align-content: center;
+   
+    height:70px;
+    display: flex;  
+    flex-wrap: wrap;
+    overflow: hidden;
 
+}
+.sidebar-items li:hover{
+    background: #a3a2a2a2;
+}
+.sidebar-heading{
 
-.menu-icons {
-    font-size: 28px;
+    width: 76%;
+    margin-left: 7px;
+    margin-top: 4px;
+    font-size: 18px;
+}
+
+.sidebar-icons {
+    font-size: 35px;
     width: 20%;
-    margin-left: 0;
+    
+   
     
 }
+.sub-menu{
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s ease;
+    margin-left: 64px;
+    
+    height: 0;
+    opacity: 0;
+    
+    width: 100%;
+}
 
+
+.sub-menu p{
+  
+   
+    height: 50px;
+    align-content: center;
+    font-size: 18px;
+}
+.sub-menu p:hover{
+    background: #a3a2a2a3;
+}
+
+ .sub-menu.show{
+    height: 100px;
+   
+    opacity: 1;
+  }
 .right_dashboard {
     width: 83%;
     border: 2px solid green;
