--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -503,15 +503,7 @@ form .text h3 a:hover {
     
 }
 
-.restro-menu{
-    width: 100%;
-    height: 45vh;
-    border-bottom:  2px solid #C7BEBE;
-    display: flex;
-    flex-direction: column;
-    
-   
-}
+
 .restro-menu-header{
     display: flex;
     
@@ -541,29 +533,25 @@ form .text h3 a:hover {
 }
 
 
-.restro-caraousel{
-    width: 100%;
-    height: 45vh;
-    display: flex;
-    flex-direction: column;
-   
-    
-}
+
 .restro-menu-box{
     
     width: 100%;
-    height: 33vh;
+    height: auto;
     display: flex;
     justify-content: space-around;
-   
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    
     
 }
 .menu-image{
-    width: 13%;
+    width: 14%;
     height: 30vh;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 30px;
+    margin-left: 10px;
 }
 
 .caraousel-image{
