--- a/src/components/black-jack/Dashboard.css
+++ b/src/components/black-jack/Dashboard.css
@@ -27,84 +27,40 @@
 
 .dashboard-sidebar{
     width: 100%;
-    margin-top: 50px;
-    height: 75vh;
-    overflow: hidden;
-
-    
-    
-  
-
-}
-
-.sidebar-items{
-   
-    list-style: none;
-    cursor: pointer;
-    align-items: center;
-}
-
-
-.sidebar-items li{
- 
-    align-content: center;
-   
-    height:70px;
-    display: flex;  
-    flex-wrap: wrap;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
-
-}
-.sidebar-items li:hover{
-    background: #a3a2a2a2;
-}
-.sidebar-heading{
-
-    width: 76%;
-    margin-left: 7px;
-    margin-top: 4px;
-    font-size: 18px;
-}
-
-.sidebar-icons {
-    font-size: 35px;
-    width: 20%;
-    
-   
-    
-}
-.sub-menu{
-    
-    transition: 0.5s ease;
-    margin-left: 64px;
-    
-    height: 0;
-    opacity: 0;
-    
-    
-    width: 100%;
-}
-
-
-.sub-menu p{
-  
-   
-    height: 50px;
-    align-content: center;
-    font-size: 18px;
-}
-.sub-menu p:hover{
-    background: #a3a2a2a3;
-}
-
- .sub-menu.show{
-    height: 100px;
+    margin-top: 40px;
+    height: 70vh;
     display: flex;
     flex-direction: column;
-    opacity: 1;
-  }
+    justify-content: space-around;
+    
+    padding-left: 10px;
+
+}
+
+.dashboard-sidebar-box {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 8vh;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.dashboard-sidebar-box:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+
+
+
+.sidebar-icons {
+    font-size: 28px;
+    width: 20%;
+    margin-left: 0;
+    
+}
+
 .right_dashboard {
     width: 83%;
     border: 2px solid green;
@@ -112,7 +68,7 @@
     height: auto;
     padding: 10px;
     background-color: #f4f4f4;
-    /* Background color to distinguish the right section */
+    
     display: flex;
     flex-direction: column;
 }
