--- a/src/components/screens/Screen.css
+++ b/src/components/screens/Screen.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-.street-container{
+.screen-container{
     width: 100%;
     height: 90vh;
     border: 2px solid red;
