--- a/src/components/black-jack/Homepage.css
+++ b/src/components/black-jack/Homepage.css
@@ -71,6 +71,8 @@
     
     display: flex;
     flex-direction: column;
+    /* justify-content: space-between; */
+    /* border: 2px solid red; */
 }
 
 .right-header {
@@ -119,6 +121,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    /* border: 2px solid red; */
 }
 
 .header-icons {
@@ -132,10 +135,17 @@
     height: 90vh;
     /* border: 2px solid red; */
     /* display: flex;
-    flex-direction: column;
-    justify-content: space-between; */
+    flex-direction: column; */
+    
 }
-
+.dashboard-content-container{
+    width: 100%;
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90vh;
+}
 .dashboard-boxes {
     width: 100%;
     height: 20vh;
@@ -259,8 +269,7 @@
 }
 
 
-/* 
-Add form restaru css */
+
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
