--- a/src/components/restaurant/Restaurant.css
+++ b/src/components/restaurant/Restaurant.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     border: 1px solid rgba(128, 128, 128, 0.499);
     width: 32%;
-    height: 37vh;
+    height: 35vh;
     border-radius: 10px;
     background: #fff;
     padding: 10px;
@@ -56,7 +56,7 @@
     /* border: 2px solid blue; */
    margin-top: 30px;
 }
-.restaurant-Screens{
+.restaurant-screens{
     font-size: 15px;
     font-weight: 600;
     padding-left: 15px;
