--- a/src/components/screens/Screen.css
+++ b/src/components/screens/Screen.css
@@ -6,7 +6,7 @@
 .screen-container{
     width: 100%;
     height: 90vh;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
@@ -20,11 +20,11 @@
     display: flex;
     flex-direction: column;
     border: 1px solid rgba(128, 128, 128, 0.499);
-    width: 26%;
+    width: 28%;
     height: 34vh;
     border-radius: 10px;
     background: #fff;
-    margin-top: 30px;
+    margin-top: 35px;
 }
 
 .screen-text{
@@ -32,10 +32,11 @@
     height: 22vh;
     align-content: flex-end;
     color: #fff;
-    background: rgb(128, 128, 128);
+    background: rgb(105, 105, 105);
     padding: 15px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    font-size: 18px
 }
 .screen-buttons{
     display: flex;
@@ -57,8 +58,12 @@
     font-weight: 500;
 }
 .restrict{
-    background: red;
+    background: rgba(255, 0, 0, 0.647);
 }
-.Manage{
+.manage{
     background: #3399FF;
+}
+
+.screen-buttons button:hover{
+    transform: scale(1.1);
 }
